--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="../styles/social-networks.css">
 	<link rel="stylesheet" href="../js/libs/bootstrap/css/bootstrap-theme.min.css">
 	<link href="../libs/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="../styles/signform.css">
+
 
 </head>
 <body>
@@ -67,83 +69,68 @@
 			<p>Don't have account <button type="button" id="sign-up-button" class="btn btn-default">Sign up</button></p>
 		</div>	
 		<div id="sign-up-container">
-			<div class="container" >
-			    <form class="form-horizontal" id="sign_up_form" role="form">
-			      <div class="row">
-			          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12  form-group">
-			            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			              <label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="name">User Name</label>
-			              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
-			                <input type="text" class="res form-control input-sm" id="name">
-			              </div>
-			              <br>
-			              <br>
-			              <label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="login">Login</label>
-			              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
-			                <input type="text" class="res form-control input-sm" id="login">
-			              </div>
-			              <br>
-			              <br>
-			              <label class="control-label control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="email">E-mail</label>
-			              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
-			                <input type="text" class="res form-control input-sm" id="email">
-			              </div>
-			              <br>
-			              <br>
-			              <label class="control-label control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="password">Password</label>
-			              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
-			                <input type="text" class="res form-control input-sm" id="password">
-			              </div>
-			              <br>
-			              <br>
-			              <label class="control-label control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="confpass">Confirm password</label>
-			              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
-			                <input type="text" class="res form-control input-sm" id="confpass">
-			              </div>
-			            </div>
-			          </div>
-			          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12  form-group">
-			              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			                <label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Yours Photo </label>
-			                <div class="image-upload col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
-			                    <label for="imgInp">
-			                      <div id="over">
-			                        <img id="blah" src="../img/anonymus.png"/>
-			                      </div>
-			                     </label>
-			                     <input id="imgInp" type="file" id="photo"/>
-			                </div>
-			              </div>
-			              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="height:14px"></div><!--Use for <br> -->
-			              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			                <label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Use Social Account </label>
-			                <div class="image-upload col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
-			                  <ul class="list-inline social-buttons">
-			                    <li>
-			                      <a href="#">
-			                        <i class="fa fa-facebook"></i>
-			                      </a>
-			                    </li>
-			                    <li>
-			                      <a href="#">
-			                        <i class="fa fa-google"></i>
-			                      </a>
-			                    </li>
-			                  </ul>
-			                </div>  
-			              </div>   
-			          </div>
-			          <div class="col-md-12 col-sm-12 col-xs-12">
-			            <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
-			              <input type="submit" class="butconf" id="signup_btn" value="Sign Up">
-			            </div>
-			            <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 ">
-			              <input type="button" id="but" class="butconf" value="Cancel">
-			            </div>
-			          </div>
-			      </div>
-			    </form>
-  			</div>
+		  <div class="container-fluid"  >
+		    <form class="form-horizontal" id="sign_up_form" role="form">
+		      <div class="row">
+		          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  form-group">
+		            	<br>
+		           
+		              <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="email">E-mail</label>
+		              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+		                <input type="text" class="res form-control input-sm" id="email">
+		              </div>
+		              <br>
+		              <br>
+		              <label class=" col-lg-4 col-md-4 col-sm-4 col-xs-4" for="password">Password</label>
+		              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+		                <input type="text" class="res form-control input-sm" id="password">
+		              </div>
+		              <br>
+		              <br>
+		              <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="confpass">Confirm password</label>
+		              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+		                <input type="text" class="res form-control input-sm" id="confpass">
+		              </div>
+		          
+		          </div>
+		          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  form-group">
+		             
+		                <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Yours Photo </label>
+		                <div class="image-upload col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
+		                    <label for="imgInp">
+		                      <div id="over">
+		                        <img id="blah" src="../img/anonymus.png"/>
+		                      </div>
+		                     </label>
+		                     <input id="imgInp" type="file" id="photo"/>
+		                </div>
+		              
+		              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="height:14px"></div><!--Use for <br> -->
+		             
+		                <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Use  Social Account </label>
+		                <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
+		                 <ul class="list-inline social-buttons">
+		                    <li>
+		                      <a href="#" class="butconf"><i class="fa fa-facebook"> </i> </a>
+		                    </li>
+		                    <li>
+		                      <a href="#" class="butconf"><i class="fa fa-google"></i>+</a>
+		                      
+		                    </li>
+		                  </ul> 
+		                </div>  
+		          </div>
+		          <div class="col-md-12 col-sm-12 col-xs-12">
+		            <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-5 col-lg-offset-1 ">
+		              <input type="submit" class="butconf" id="signup_btn" value="Sign Up">
+		            </div>
+		            <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-5 col-lg-offset-1 ">
+		              <input type="button" id="but" class="butconf" value="Cancel">
+		            </div>
+		          </div>
+		      </div>
+		    </form>
+		  </div>
 		</div>	
 	</div>
 	<script src="../js/libs/jquery/jquery-2.1.4.min.js"></script>
