--- a/templates/signform.html
+++ b/templates/signform.html
@@ -18,6 +18,8 @@
 <!--Script for Image Avatar-->
 <script src="../libs/jquery-2.1.4.js"></script>
 <script src="../js/apps/signform.js"></script>
+<script src="../js/apps/validation.js"></script>
+<script src="../js/apps/addValid.js"></script>
 
 <!--Styles-->
 <link rel="stylesheet" href="../styles/signform.css">
@@ -74,17 +76,14 @@
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="height:14px"></div><!--Use for <br> -->
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Use Social Account </label>
-                <div class="image-upload col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
-                  <ul class="list-inline social-buttons">
+                <div class="col-lg-8 col-md-8 col-sm-9  col-xs-8 ">
+                 <ul class="list-inline social-buttons">
                     <li>
-                      <a href="#">
-                        <i class="fa fa-facebook"></i>
-                      </a>
+                      <a href="#" class="butconf"><i class="fa fa-facebook"></i> </a>
                     </li>
                     <li>
-                      <a href="#">
-                        <i class="fa fa-google"></i>
-                      </a>
+                      <a href="#" class="btn butconf"><i class="fa fa-google">+</i> </a>
+                      
                     </li>
                   </ul>
                 </div>  
@@ -102,9 +101,7 @@
     </form>
   </div>
   
-  <script src="../js/libs/jquery/jquery-2.1.4.js"></script>
-  <script src="../js/apps/validation.js"></script>
-  <script src="../js/apps/addValid.js"></script>
+ <script type="text/javascript"></script>
   
 </body>
 
