--- a/public/js/pages/templates/SignInFormTemplate.html
+++ b/public/js/pages/templates/SignInFormTemplate.html
@@ -1,64 +1,64 @@
  <div class="container-fluid"  >
-		    <form class="form-horizontal" id="sign_up_form" role="form">
-		      <div class="row">
-		          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		            	<br>
-		           <!--Завернути  в form group-->
-		           	  <div class="form-group">	
-		                <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="email">E-mail</label>
-		                <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
-		                  <input type="email" class="res form-control input-sm" id="email">
-		                </div>
-		          	  </div>
-		              <div class="form-group">	
-		              <label class=" col-lg-4 col-md-4 col-sm-4 col-xs-4" for="password">Password</label>
-		              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
-		                <input type="password" class="res form-control input-sm" id="password">
-		              </div>
-		              </div>
-		              <div class="form-group">
-		              <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="confpass">Confirm password</label>
-		              <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
-		                <input type="password" class="res form-control input-sm" id="confpass">
-		              </div>
-		              </div>
-		          
-		          </div>
-		          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		            <div class="form-group">
-		                <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Your Photo </label>
-		                <div class="image-upload col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
-		                    <label for="imgInp">
-		                      <div id="over">
-		                        <img id="blah" src="img/anonymus.png"/>
-		                      </div>
-		                     </label>
-		                     <input id="imgInp" type="file" id="photo"/>
-		                </div>
-		            </div>
-		            <div class="form-group">
-		                <label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Use  your Account </label>
-		                <div class="col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
-		                 <ul class="list-inline social-buttons">
-		                    <li>
-		                      <a href="#" class="butconf"><i class="fa fa-facebook"> </i> </a>
-		                    </li>
-		                    <li>
-		                      <a href="#" class="butconf"><i class="fa fa-google"></i>+</a> 
-		                    </li>
-		                  </ul> 
-		                </div> 
-		            </div >
-		          </div>
-		          <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		            <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-5 col-lg-offset-1 ">
-		              <input type="submit" class="butconf" id="signup_btn" value="Sign Up">
-		            </div>
-		            <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-5 col-lg-offset-1 ">
-		              <input type="button" id="but" class="butconf" value="Cancel">
-		            </div>
-		          </div>
-		      </div>
-		    </form>
-		  </div>
-		</div>
+ 	<form class="form-horizontal" id="sign_up_form" role="form">
+ 		<div class="row">
+ 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+ 				<br>
+ 				<!--Завернути  в form group-->
+ 				<div class="form-group">	
+ 					<label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="email">E-mail</label>
+ 					<div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+ 						<input type="email" class="res form-control input-sm" id="email">
+ 					</div>
+ 				</div>
+ 				<div class="form-group">	
+ 					<label class=" col-lg-4 col-md-4 col-sm-4 col-xs-4" for="password">Password</label>
+ 					<div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+ 						<input type="password" class="res form-control input-sm" id="password">
+ 					</div>
+ 				</div>
+ 				<div class="form-group">
+ 					<label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="confpass">Confirm password</label>
+ 					<div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
+ 						<input type="password" class="res form-control input-sm" id="confpass">
+ 					</div>
+ 				</div>
+ 				
+ 			</div>
+ 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+ 				<div class="form-group">
+ 					<label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Your Photo </label>
+ 					<div class="image-upload col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
+ 						<label for="imgInp">
+ 							<div id="over">
+ 								<img id="blah" src="img/anonymus.png"/>
+ 							</div>
+ 						</label>
+ 						<input  type="file" id="imgInp"/>
+ 					</div>
+ 				</div>
+ 				<div class="form-group">
+ 					<label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="photo">Use  your Account </label>
+ 					<div class="col-lg-8 col-md-8 col-sm-8  col-xs-8 ">
+ 						<ul class="list-inline social-buttons">
+ 							<li>
+ 								<a href="#" class="butconf"><i class="fa fa-facebook"> </i> </a>
+ 							</li>
+ 							<li>
+ 								<a href="#" class="butconf"><i class="fa fa-google"></i>+</a> 
+ 							</li>
+ 						</ul> 
+ 					</div> 
+ 				</div >
+ 			</div>
+ 			<div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+ 				<div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-5 col-lg-offset-1 ">
+ 					<input type="submit" class="butconf" id="signup_btn" value="Sign Up">
+ 				</div>
+ 				<div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-5 col-lg-offset-1 ">
+ 					<input type="button" id="but" class="butconf" value="Cancel">
+ 				</div>
+ 			</div>
+ 		</div>
+ 	</form>
+ </div>
+</div>
