--- a/public/js/pages/templates/SignUpFormTemplate.html
+++ b/public/js/pages/templates/SignUpFormTemplate.html
@@ -9,18 +9,21 @@
  					<div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
  						<input type="email" class="res form-control input-sm" id="email">
  					</div>
+ 					<div class="col-xs-12 help-block hidden"></div>
  				</div>
  				<div class="form-group">	
  					<label class=" col-lg-4 col-md-4 col-sm-4 col-xs-4" for="password">Password</label>
  					<div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
  						<input type="password" class="res form-control input-sm" id="password">
  					</div>
+ 					<div class="col-xs-12 help-block hidden"></div>
  				</div>
  				<div class="form-group">
  					<label class="col-lg-4 col-md-4 col-sm-4 col-xs-4" for="confpass">Confirm password</label>
  					<div class="col-lg-8 col-md-8 col-sm-8  col-xs-8">
  						<input type="password" class="res form-control input-sm" id="confpass">
  					</div>
+ 					<div class="col-xs-12 help-block hidden"></div>
  				</div>
  				
  			</div>
