--- a/public/js/pages/templates/LoginTemplate.html
+++ b/public/js/pages/templates/LoginTemplate.html
@@ -7,12 +7,14 @@
     <div class="col-sm-8 col-xs-8 col-lg-8">
     <input type="email" id="email" name="email" placeholder="you@domain.com" class="form-control"/>
     </div>
+    <div class="col-xs-12 help-block hidden"></div>
     </div>
     <div class="form-group form-group-sm">
     <label for="password" class="col-sm-2  col-xs-2 col-lg-2">Password</label>
     <div class="col-sm-8 col-xs-8 col-lg-8">
     <input type="password" id="password" name="password"  placeholder="password" class="form-control"/> 
     </div>
+    <div class="col-xs-12 help-block hidden"></div>
     </div>
     <div class="form-group">
     <div class="col-sm-8 col-xs-8 col-lg-8 col-sm-offset-2 col-xs-offset-2 col-lg-offset-2">
