--- a/public/js/pages/templates/CryOutTemplate.html
+++ b/public/js/pages/templates/CryOutTemplate.html
@@ -25,15 +25,15 @@
     <div role="tabpanel" class="tab-pane" id="description">
       <div class="form-group">
       <label for="issue-name">Коротка назва проблеми</label>
-      <input type="text" id="issue-name" class="form-control">
+      <input type="text" id="issue-name" class="desc-data form-control">
       </div>
       <div class="form-group">
       <label for="issue-type">Tип проблеми</label>
-      <input type="text" id="issue-type" class="form-control">
+      <input type="text" id="issue-type" class="desc-data form-control">
       </div>
       <div class="form-group">
       <label for="issue-description">Опис проблеми</label>
-      <input type="text" id="issue-description" class="form-control">
+      <input type="text" id="issue-description" class="desc-data form-control">
       </div>
       <div class="form-group">
       <button class="btn-next" >Далі</button>
@@ -41,8 +41,11 @@
     </div>
 
     <div role="tabpanel" class="tab-pane" id="photo">
-      <p id="photo-container">Клікніть або перенесіть фото, щоб завантажити</p>
-      <button id="AddIssueButton">Додати</button>
+      <img src="#" id="photo-container" style="display:none">
+	  <form enctype="multipart/form-data" method="post" id="fileform">
+		<input id="fileUpload" type="file" name="attachments">
+	  </form>
+      <button id="AddIssueButton">Create new issue</button>
     </div>
   </div>
 </div>
