--- a/public/js/pages/templates/SignUpFormTemplate.html
+++ b/public/js/pages/templates/SignUpFormTemplate.html
@@ -1,5 +1,5 @@
  <div class="container-fluid"  >
- 	<form class="form-horizontal" id="sign_up_form" role="form">
+ 	<form enctype="multipart/form-data" class="form-horizontal" id="sign_up_form" role="form">
  		<div class="row">
  			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
  				<!--Завернути  в form group-->
