--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -109,3 +109,79 @@ header a:visited {
 #photo button {
   margin-left: 5%;
 }
+/*Styles for manager page */
+.left-sidebar {
+  background-color: #f6f6f7;
+  height: 100%;
+}
+.left-sidebar .profile {
+  margin: 10px 0 30px 0;
+  min-height: 70px;
+}
+.left-sidebar p {
+  margin: 0px;
+  padding: 0px;
+  font-size: 17px;
+  font-weight: bold;
+}
+.left-sidebar button {
+  border-color: #ea556f;
+  border-width: 1px;
+  font-size: 12px;
+  background-color: #f6f6f7;
+  margin-top: 17px;
+}
+.left-sidebar ul {
+  padding: 0;
+  margin: 0 0 0 10px;
+  line-height: 20px;
+}
+.left-sidebar ul li {
+  list-style-type: none;
+  line-height: 35px;
+}
+.left-sidebar ul li a {
+  text-decoration: none;
+  color: inherit;
+}
+.manager-panel .form-group {
+  padding: 0px;
+}
+.manager-panel input {
+  float: left;
+  width: 80%;
+  border-radius: 0px;
+  font-weight: normal;
+}
+.manager-panel button {
+  min-width: 20%;
+  min-height: 34px;
+  color: #ffffff;
+  font-size: 22px;
+  border-width: 0px;
+  background-color: #ea556f;
+}
+.manager-panel .new-status {
+  color: #ea556f;
+  font-weight: bold;
+}
+.manager-panel .form-group {
+  margin-left: 0px;
+  font-weight: bold;
+}
+.manager-panel .to-resolve-status {
+  color: #63978c;
+  font-weight: bold;
+}
+.manager-panel .approved-status {
+  color: #508b7e;
+}
+.manager-panel .edit-icons a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 16px;
+}
+.manager-panel .edit-icons a:hover {
+  color: #63978c;
+}
+/*End of manager page styles */
