--- a/public/js/pages/templates/SignUpFormTemplate.html
+++ b/public/js/pages/templates/SignUpFormTemplate.html
@@ -58,10 +58,10 @@
  					<h4>Use your Account:</h4>
  				</div>
  				<div class="col-sm-12">
- 					<a class="btn btn-primary btn-sm btn-block" href="#" role="button"><i class="fa fa-facebook"></i> Sign up with Facebook</a>
+ 					<a class="btn btn-primary btn-sm btn-block" href="/auth/facebook" role="button"><i class="fa fa-facebook"></i> Sign up with Facebook</a>
  				</div>
  				<div class="col-sm-12">
- 					<a class="btn btn-info btn-sm btn-block" href="#" role="button"><i class="fa fa-google"></i>+ Sign up with Google</a>
+ 					<a class="btn btn-info btn-sm btn-block" href="auth/google" role="button"><i class="fa fa-google"></i>+ Sign up with Google</a>
  				</div>
  			</div>
  				
