--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -199,6 +199,7 @@ header #main-banner:hover {
 @media screen and (max-width: 990px) {
   #manager-panel .fa-align-justify {
     display: block;
+    cursor: pointer;
   }
   .sidebar-mobile {
     display: none;
