--- a/public/less/index.less
+++ b/public/less/index.less
@@ -206,6 +206,7 @@ header {
 @media screen and (max-width: 990px){
   #manager-panel .fa-align-justify{
     display:block;
+    cursor: pointer;
   }
   .sidebar-mobile{
     display: none;
